# nmaprs

./: Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/workflows/: ci.yml
benches/: scan.rs
c/: expr_match.cpp
completions/: _nmaprs
data/: nmap_ip_protocols_fast.txt  top_ports.txt
scripts/: benchmark_vs_nmap.sh  fetch_nmap_data.sh  fetch_top_ports.sh
src/: argv_expand.rs  cli.rs  config.rs  discovery.rs  fp_match.rs  ftp_bounce.rs  help_tp.rs  icmp_listen.rs  icmp_ping.rs  idle.rs  ip_proto.rs  ipv6_l4.rs  lib.rs  main.rs  net_util.rs  nse.rs  os_db.rs  os_detect.rs  os_fp_db.rs  os_scan.rs  output.rs  ping.rs  ports.rs  resume.rs  scan.rs  scanflags.rs  sctp.rs  skiddie.rs  syn.rs  target.rs  trace.rs  vscan.rs
tests/: cli.rs
