[package]
name = "nmaprs"
version = "0.1.0"
edition = "2021"
description = "High-performance parallel network scanner with nmap-compatible CLI surface"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MenkeTechnologies/nmaprs"
readme = "README.md"
keywords = ["nmap", "network", "scanner", "security", "port-scan"]
categories = ["command-line-utilities", "network-programming"]

[lib]
name = "nmaprs"
path = "src/lib.rs"

[[bin]]
name = "nmaprs"
path = "src/main.rs"

[[bench]]
name = "scan"
harness = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env", "string"] }
futures = "0.3"
if-addrs = "0.15.0"
ipnet = "2.10"
pnet = "0.35"
pnet_sys = "0.35"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0"
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0"
criterion = "0.5"
predicates = "3.1"
tempfile = "3.14"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"
