[package]
name = "nmaprs"
version = "0.1.1"
edition = "2021"
description = "High-performance parallel network scanner with nmap-compatible CLI surface"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MenkeTechnologies/nmaprs"
readme = "README.md"
keywords = ["nmap", "network", "scanner", "security", "port-scan"]
categories = ["command-line-utilities", "network-programming"]

[lib]
name = "nmaprs"
path = "src/lib.rs"

[[bin]]
name = "nmaprs"
path = "src/main.rs"

[[bin]]
name = "nms"
path = "src/bin/nms.rs"

[[bench]]
name = "scan"
harness = false

[dependencies]
anyhow = "1.0"
crc32c = "0.6"
crc32fast = "1.4"
clap = { version = "4.5", features = ["derive", "env", "string"] }
futures = "0.3"
if-addrs = "0.15.0"
ipnet = "2.10"
dashmap = "6.1"
libc = "0.2"
pnet = "0.35"
pnet_sys = "0.35"
rand = "0.8"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0"
tokio = { version = "1.43", features = ["full"] }
tokio-socks = "0.5"
hickory-resolver = { version = "0.25", features = ["tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12"] }
webpki-roots = "0.26"
rustls-pki-types = "1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
assert_cmd = "2.0"
criterion = "0.5"
predicates = "3.1"
tempfile = "3.14"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
